--- a/homework1.html
+++ b/homework1.html
@@ -24,7 +24,7 @@
   <div>
    <center>
     <h1>Тагиров Антон Алексеевич</h1>
-    <img src="ava.jpg" alt="">
+    <img src="img/ava.jpg" alt="">
   </center>
   <p>Сейчас работаю в ресторанном бизнесе уже более 5-ти лет</p>
   <hr>
